2014-01-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix several translatable strings.

	Suggested by: D. Prévot.

2014-01-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.c: List available targets.

2014-01-23  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.c (write_to_disk): Add an info message.

2014-01-21  Andrey Borzenkov <arvidjaar@gmail.com>

	* Makefile.am: Allow adding extra files to generated Windows ZIP
	archive by setting GRUB_WINDOWS_EXTRA_DIST.

2014-01-21  Andrey Borzenkov <arvidjaar@gmail.com>

	* configure.ac: Look for DejaVuSans also in /usr/share/fonts/truetype.
	Show detected font path in summary.

2014-01-21  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* grub-core/net/arp.c (grub_net_arp_send_request): Increase network try
	interval gradually.
	* grub-core/net/icmp6.c (grub_net_icmp6_send_request): Likewise.
	* grub-core/net/net.c (grub_net_fs_read_real): Likewise.
	* grub-core/net/tftp.c (tftp_open): Likewise.
	* include/grub/net.h (GRUB_NET_INTERVAL_ADDITION): New define.

2014-01-21  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* grub-core/net/net.c (receive_packets): Change stop condition to avoid
	infinite loops.

	In net/net.c there is a while (1) that only exits if there is a stop
	condition and more then 10 packages or if there is no package received.

	If GRUB is idle and enter in this loop, the only condition to leave is
	if it doesn't have incoming packages. In a network with heavy traffic
	this never happens.

2014-01-19  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/osdep/freebsd/hostdisk.c (grub_util_fd_open): Ignore
	EPERM when modifying kern.geom.debugflags.  It is only a problem for
	such things as installing GRUB to the MBR, in which case there'll be
	an error later anyway, not for opening files during tests.

2014-01-18  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/Makefile.am: Build grub_emu_init.[ch] from MODULE_FILES
	instead of MOD_FILES.