@@ -1,3 +1,7 @@
+2014-01-25  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	* util/grub-mkimage.c: Make prefix argument mandatory.
+
 2014-01-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Fix several translatable strings.
